--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-<meta name="apple-touch-fullscreen" content="yes" />
+<!--<meta name="apple-touch-fullscreen" content="yes" />-->
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="format-detection" content="telephone=no" />
 <meta name="viewport" content="minimal-ui, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
@@ -83,6 +84,7 @@
 	
 	<script src="js/modernizr.js"></script>
 	<script src="js/jquery.min.js"></script>
+	<script src="js/verge.min.js"></script>
 	<script src="js/main.js"></script>
 		
 </body>
